--- a/webapp/ClientApp/package.json
+++ b/webapp/ClientApp/package.json
@@ -2,15 +2,19 @@
   "name": "webapp",
   "version": "0.1.0",
   "private": true,
-  "dependencies": { 
-    "http-proxy-middleware": "^2.0.6", 
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.8",
+    "http-proxy-middleware": "^2.0.6",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
-    "react-scripts": "^5.0.1", 
+    "react-scripts": "^5.0.1",
     "rimraf": "^5.0.0",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
@@ -36,7 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "nan": "^2.17.0",
-    "typescript": "^4.9.5", 
+    "typescript": "^4.9.5",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
